--- a/Telecom Project_TAsk4.ipynb
+++ b/Telecom Project_TAsk4.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c2f4fbd2-affa-47e6-b390-237b6a54e4f2",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d39127fd-306c-4788-b7de-ecbeeb0ecfb3",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1da6b6bd-aa77-472e-b993-a7c8a972da4a",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f0ff4936-2b84-4484-9f36-362c952c7488",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "3a594a06-ee90-4d63-961e-b2360ec8a508",
    "metadata": {},
    "outputs": [],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "47c658a4-d48e-43ad-9020-813e711e422f",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "sklearn.cluster._kmeans.KMeans"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "df46ef3e-1321-4bca-a0e8-31a1895a516c",
    "metadata": {},
    "outputs": [],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "2fbb7ac4-cd33-4ac7-9119-2052c1993452",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "84865245-d718-44fa-a298-beb1d9dc391b",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "55dece66-e40a-4228-8f6d-43d8d5a03773",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "bc8f608c-17ee-4cc7-9373-6c47135128b3",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "cadafb2c-5a14-4763-a867-8fcefadc03c2",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "id": "652f9e98-61e6-4d20-80ea-a4f18e5b56dd",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "ac7771e1-481a-44d9-94ba-fb431d7d3a07",
    "metadata": {},
    "outputs": [],
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "25590c49-3576-4f59-bfd1-4d6dd7f4fba2",
    "metadata": {},
    "outputs": [],
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "id": "516b3456-8633-44e4-a835-1b407fca3883",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1113,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "id": "beb290c0-95a2-4ef0-9b85-a480142fcc64",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "c3364ab6-902f-4873-9793-f7d25072e2ca",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "id": "a6de8b90-a025-4922-8a3a-7dbffa47661d",
    "metadata": {},
    "outputs": [],
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "id": "d03a8738-c801-47fd-8348-8b0a95f80c05",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "id": "ddba5a96-eebf-4b4d-b536-93cb169a1207",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "id": "e5a80999-8119-42a3-abdb-2cab556a6e81",
    "metadata": {},
    "outputs": [
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "id": "44bf0a55-78c0-4884-8226-68c4e05d2123",
    "metadata": {},
    "outputs": [
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "id": "01d409b4-89f5-4738-abe6-965369c0e8ea",
    "metadata": {},
    "outputs": [],
@@ -1342,19 +1342,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6b8f354a-db77-4a3c-8bfe-6c59951dbfd5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Key Insights"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "8ec89e5e-d8f9-4bcb-a316-a1baf995c518",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "1. Customer Segmentation:\n",
+    "\n",
+    "High Engagement Cluster: A large cluster indicates a broad base of satisfied customers with high engagement.\n",
+    "Low Engagement and Poor Experience Clusters: Smaller clusters with low engagement and poor experience scores highlight areas needing improvement.\n",
+    "\n",
+    "2. Satisfaction Scores:\n",
+    "\n",
+    "Top 10 Satisfied Customers: Identified customers with the highest satisfaction scores provide insight into successful attributes and areas for replication.\n",
+    "\n",
+    "3. Regression Analysis:\n",
+    "\n",
+    "Impact of Metrics: The linear regression model reveals how TCP retransmissions, RTT, and throughput affect satisfaction scores.\n",
+    "Model Performance: Provides Mean Squared Error (MSE), coefficients, and intercept, indicating prediction accuracy and metric significance.\n",
+    "\n",
+    "4. Cluster Analysis:\n",
+    "\n",
+    "Engagement vs. Experience: Visualization shows how different clusters perform in terms of engagement and experience scores.\n",
+    "Average Scores by Cluster: Highlights performance differences between clusters, showing where satisfaction and experience are highest or lowest.\n",
+    "\n",
+    "5. Actionable Recommendations:\n",
+    "\n",
+    "Enhance Engagement: Focus on improving engagement for low-scoring clusters through better network performance or customer support.\n",
+    "Improve Experience: Address issues causing high RTT, retransmissions, or low throughput for clusters with poor experience scores.\n",
+    "Replicate Success: Use insights from top satisfied customers to improve services for other customers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ffa09e7",
+   "metadata": {},
    "source": []
   }
  ],
